@@ -27,11 +27,16 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.sql.SQLException;
-import java.text.DateFormat;
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
+import java.time.Instant;
+import java.time.LocalDate;
+import java.time.Year;
+import java.time.YearMonth;
+import java.time.ZoneOffset;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
-import java.util.Calendar;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.EnumSet;
 import java.util.HashMap;
@@ -47,15 +52,14 @@ import com.maxmind.geoip2.exception.GeoIp2Exception;
 import com.maxmind.geoip2.model.CityResponse;
 import com.opencsv.CSVReader;
 import com.opencsv.CSVWriter;
+import jakarta.inject.Named;
 import jakarta.servlet.http.HttpServletRequest;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.time.DateFormatUtils;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.impl.client.HttpClientBuilder;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.solr.client.solrj.SolrClient;
@@ -85,6 +89,7 @@ import org.apache.solr.common.params.MapSolrParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.ShardParams;
 import org.apache.solr.common.util.NamedList;
+import org.dspace.app.client.DSpaceHttpClientFactory;
 import org.dspace.authorize.service.AuthorizeService;
 import org.dspace.content.Bitstream;
 import org.dspace.content.Bundle;
@@ -101,12 +106,12 @@ import org.dspace.core.Context;
 import org.dspace.discovery.DiscoverResult.FacetPivotResult;
 import org.dspace.eperson.EPerson;
 import org.dspace.service.ClientInfoService;
+import org.dspace.service.impl.HttpConnectionPoolService;
 import org.dspace.services.ConfigurationService;
 import org.dspace.statistics.service.SolrLoggerService;
 import org.dspace.statistics.util.LocationUtils;
 import org.dspace.statistics.util.SpiderDetector;
 import org.dspace.usage.UsageWorkflowEvent;
-import org.dspace.util.SolrUtils;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Autowired;
 
@@ -152,6 +157,8 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     protected GeoIpService geoIpService;
     @Autowired
     private AuthorizeService authorizeService;
+    @Autowired @Named("solrHttpConnectionPoolService")
+    protected HttpConnectionPoolService httpConnectionPoolService;
 
     protected SolrClient solr;
 
@@ -159,7 +166,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     private String statisticsCoreBase;
 
     /** Possible values of the {@code type} field of a usage event document. */
-    public static enum StatisticsType {
+    public enum StatisticsType {
         VIEW("view"),
         SEARCH("search"),
         SEARCH_RESULT("search_result"),
@@ -239,6 +246,10 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             throw new RuntimeException(e);
         }
 
+        if (dspaceObject instanceof Bitstream && !isBitstreamLoggable((Bitstream) dspaceObject)) {
+            return;
+        }
+
         if (solr == null) {
             return;
         }
@@ -250,8 +261,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             if (doc1 == null) {
                 return;
             }
-            if (dspaceObject instanceof Bitstream) {
-                Bitstream bit = (Bitstream) dspaceObject;
+            if (dspaceObject instanceof Bitstream bit) {
                 List<Bundle> bundles = bit.getBundles();
                 for (Bundle bundle : bundles) {
                     doc1.addField("bundleName", bundle.getName());
@@ -286,6 +296,10 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     @Override
     public void postView(DSpaceObject dspaceObject,
                          String ip, String userAgent, String xforwardedfor, EPerson currentUser, String referrer) {
+        if (dspaceObject instanceof Bitstream && !isBitstreamLoggable((Bitstream) dspaceObject)) {
+            return;
+        }
+
         if (solr == null) {
             return;
         }
@@ -297,8 +311,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             if (doc1 == null) {
                 return;
             }
-            if (dspaceObject instanceof Bitstream) {
-                Bitstream bit = (Bitstream) dspaceObject;
+            if (dspaceObject instanceof Bitstream bit) {
                 List<Bundle> bundles = bit.getBundles();
                 for (Bundle bundle : bundles) {
                     doc1.addField("bundleName", bundle.getName());
@@ -468,7 +481,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             storeParents(doc1, dspaceObject);
         }
         // Save the current time
-        doc1.addField("time", DateFormatUtils.format(time, DATE_FORMAT_8601));
+        doc1.addField("time", time.toInstant().toString());
         if (currentUser != null) {
             doc1.addField("epersonid", currentUser.getID().toString());
         }
@@ -560,7 +573,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             storeParents(doc1, dspaceObject);
         }
         // Save the current time
-        doc1.addField("time", DateFormatUtils.format(new Date(), DATE_FORMAT_8601));
+        doc1.addField("time", Instant.now().toString());
         if (currentUser != null) {
             doc1.addField("epersonid", currentUser.getID().toString());
         }
@@ -688,29 +701,25 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     @Override
     public void storeParents(SolrInputDocument doc1, DSpaceObject dso)
         throws SQLException {
-        if (dso instanceof Community) {
-            Community comm = (Community) dso;
+        if (dso instanceof Community comm) {
             List<Community> parentCommunities = comm.getParentCommunities();
             for (Community parent : parentCommunities) {
                 doc1.addField("owningComm", parent.getID().toString());
                 storeParents(doc1, parent);
             }
-        } else if (dso instanceof Collection) {
-            Collection coll = (Collection) dso;
+        } else if (dso instanceof Collection coll) {
             List<Community> communities = coll.getCommunities();
             for (Community community : communities) {
                 doc1.addField("owningComm", community.getID().toString());
                 storeParents(doc1, community);
             }
-        } else if (dso instanceof Item) {
-            Item item = (Item) dso;
+        } else if (dso instanceof Item item) {
             List<Collection> collections = item.getCollections();
             for (Collection collection : collections) {
                 doc1.addField("owningColl", collection.getID().toString());
                 storeParents(doc1, collection);
             }
-        } else if (dso instanceof Bitstream) {
-            Bitstream bitstream = (Bitstream) dso;
+        } else if (dso instanceof Bitstream bitstream) {
             List<Bundle> bundles = bitstream.getBundles();
             for (Bundle bundle : bundles) {
                 List<Item> items = bundle.getItems();
@@ -896,7 +905,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
         processor.execute(query);
 
-        // Add the new (updated onces
+        // Add the new (updated once
         for (int i = 0; i < docsToUpdate.size(); i++) {
             SolrInputDocument solrDocument = docsToUpdate.get(i);
 
@@ -1051,10 +1060,10 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         ObjectCount[] result = new ObjectCount[resultSize];
         // Run over our datefacet & store all the values
         for (int i = 0; i < timeFacet.getCounts().size(); i++) {
-            RangeFacet.Count dateCount = (RangeFacet.Count) timeFacet.getCounts().get(i);
+            RangeFacet.Count dateCount = timeFacet.getCounts().get(i);
             result[i] = new ObjectCount();
             result[i].setCount(dateCount.getCount());
-            result[i].setValue(getDateView(dateCount.getValue(), dateType, context));
+            result[i].setValue(getDateView(dateCount.getValue(), dateType));
         }
         if (showTotal) {
             result[result.length - 1] = new ObjectCount();
@@ -1106,24 +1115,30 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         return objCount;
     }
 
-    protected String getDateView(String name, String type, Context context) {
+    protected String getDateView(String name, String type) {
         if (name != null && name.matches("^[0-9]{4}\\-[0-9]{2}.*")) {
-            /*
-             * if ("YEAR".equalsIgnoreCase(type)) return name.substring(0, 4);
-             * else if ("MONTH".equalsIgnoreCase(type)) return name.substring(0,
-             * 7); else if ("DAY".equalsIgnoreCase(type)) return
-             * name.substring(0, 10); else if ("HOUR".equalsIgnoreCase(type))
-             * return name.substring(11, 13);
-             */
             // Get our date
-            Date date = SolrUtils.parseSolrDate(context, name);
-            SimpleDateFormat simpleFormat =
-                    new SimpleDateFormat(
-                            SolrUtils.getDateformatFrom(type),
-                            context.getCurrentLocale()
-                    );
+            LocalDate date = null;
+            try {
+                // First parse to an instant
+                Instant instant = Instant.parse(name);
+                // Then extract the LocalDate
+                date = instant.atZone(ZoneOffset.UTC).toLocalDate();
+            } catch (DateTimeParseException e) {
+                e.printStackTrace();
+            }
             if (date != null) {
-                name = simpleFormat.format(date);
+                String dateformatString = "dd-MM-yyyy";
+                if ("DAY".equals(type)) {
+                    DateTimeFormatter simpleFormat = DateTimeFormatter.ofPattern(dateformatString);
+                    name = simpleFormat.format(date);
+                } else if ("MONTH".equals(type)) {
+                    dateformatString = "MMMM yyyy";
+                    DateTimeFormatter simpleFormat = DateTimeFormatter.ofPattern(dateformatString);
+                    name = simpleFormat.format(YearMonth.from(date));
+                } else if ("YEAR".equals(type)) {
+                    name = String.valueOf(date.getYear());
+                }
             }
 
         }
@@ -1157,7 +1172,6 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             return null;
         }
 
-        // System.out.println("QUERY");
         SolrQuery solrQuery = new SolrQuery().setRows(rows).setQuery(query)
                                              .setFacetMinCount(facetMinCount);
         addAdditionalSolrYearCores(solrQuery);
@@ -1206,7 +1220,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         // performance and ensure the search result ordering will
         // not be influenced
 
-        // Choose to filter by isBot field, may be overriden in future
+        // Choose to filter by isBot field, may be overridden in future
         // to allow views on stats based on bots.
         if (defaultFilterQueries && configurationService.getBooleanProperty(
                 "solr-statistics.query.filter.isBot", true)) {
@@ -1276,7 +1290,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         //We go back to 2000 the year 2000, this is a bit overkill but this way we ensure we have everything
         //The alternative would be to sort but that isn't recommended since it would be a very costly query !
         yearRangeQuery.add(FacetParams.FACET_RANGE_START,
-                           "NOW/YEAR-" + (Calendar.getInstance().get(Calendar.YEAR) - 2000) + "YEARS");
+                           "NOW/YEAR-" + (Year.now().getValue() - 2000) + "YEARS");
         //Add the +0year to ensure that we DO NOT include the current year
         yearRangeQuery.add(FacetParams.FACET_RANGE_END, "NOW/YEAR+0YEARS");
         yearRangeQuery.add(FacetParams.FACET_RANGE_GAP, "+1YEAR");
@@ -1297,12 +1311,8 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             //Create a range query from this !
             //We start with out current year
             DCDate dcStart = new DCDate(count.getValue());
-            Calendar endDate = Calendar.getInstance();
             //Advance one year for the start of the next one !
-            endDate.setTime(dcStart.toDate());
-            endDate.add(Calendar.YEAR, 1);
-            DCDate dcEndDate = new DCDate(endDate.getTime());
-
+            DCDate dcEndDate = new DCDate(dcStart.toDate().plusYears(1));
 
             StringBuilder filterQuery = new StringBuilder();
             filterQuery.append("time:([");
@@ -1346,10 +1356,10 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                         + "."
                         + i
                         + ".csv");
-                try ( CloseableHttpClient hc = HttpClientBuilder.create().build(); ) {
+                try (CloseableHttpClient hc = DSpaceHttpClientFactory.getInstance().buildWithoutProxy()) {
                     HttpResponse response = hc.execute(get);
                     csvInputstream = response.getEntity().getContent();
-                    //Write the csv ouput to a file !
+                    //Write the csv output to a file !
                     FileUtils.copyInputStreamToFile(csvInputstream, csvFile);
                 }
                 filesToUpload.add(csvFile);
@@ -1400,7 +1410,10 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         //DS-3458: Test to see if a solr core already exists.  If it exists,
         // return a connection to that core.  Otherwise create a new core and
         // return a connection to it.
-        HttpSolrClient returnServer = new HttpSolrClient.Builder(baseSolrUrl + coreName).build();
+        HttpSolrClient returnServer =
+            new HttpSolrClient.Builder(baseSolrUrl + coreName)
+                .withHttpClient(httpConnectionPoolService.getClient())
+                .build();
         try {
             SolrPingResponse ping = returnServer.ping();
             log.debug("Ping of Solr Core {} returned with Status {}",
@@ -1420,7 +1433,10 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         create.setConfigSet(configSetName);
         create.setInstanceDir(coreName);
 
-        HttpSolrClient solrServer = new HttpSolrClient.Builder(baseSolrUrl).build();
+        HttpSolrClient solrServer =
+            new HttpSolrClient.Builder(baseSolrUrl)
+                .withHttpClient(httpConnectionPoolService.getClient())
+                .build();
         create.process(solrServer);
         log.info("Created core with name: {} from configset {}", coreName, configSetName);
         return returnServer;
@@ -1488,7 +1504,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
                 HttpGet get = new HttpGet(solrRequestUrl);
                 List<String[]> rows;
-                try ( CloseableHttpClient hc = HttpClientBuilder.create().build(); ) {
+                try (CloseableHttpClient hc = DSpaceHttpClientFactory.getInstance().buildWithoutProxy()) {
                     HttpResponse response = hc.execute(get);
                     InputStream csvOutput = response.getEntity().getContent();
                     Reader csvReader = new InputStreamReader(csvOutput);
@@ -1510,7 +1526,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 //csvp.setAlwaysQuote(false);
 
                 //Write the header !
-                csvp.writeNext((String[]) ArrayUtils.add(header, "bundleName"));
+                csvp.writeNext(ArrayUtils.add(header, "bundleName"));
                 Map<String, String> bitBundleCache = new HashMap<>();
                 //Loop over each line (skip the headers though)!
                 for (int j = 1; j < csvParsed.length; j++) {
@@ -1549,7 +1565,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                             bundleName = "BITSTREAM_DELETED";
                         }
                     }
-                    csvp.writeNext((String[]) ArrayUtils.add(csvLine, bundleName));
+                    csvp.writeNext(ArrayUtils.add(csvLine, bundleName));
                 }
 
                 //Loop over our parsed csv
@@ -1615,7 +1631,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 //export docs
                 addDocumentsToFile(context, docs, exportOutput);
                 System.out.println(
-                    "Export hits [" + i + " - " + String.valueOf(i + 9999) + "] to " + exportOutput.getCanonicalPath());
+                    "Export hits [" + i + " - " + (i + 9999) + "] to " + exportOutput.getCanonicalPath());
             }
         } catch (Exception e) {
             log.error("Error while exporting SOLR data", e);
@@ -1631,7 +1647,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     }
 
     protected void addDocumentsToFile(Context context, SolrDocumentList docs, File exportOutput)
-        throws SQLException, ParseException, IOException {
+        throws SQLException, DateTimeParseException, IOException {
         for (SolrDocument doc : docs) {
             String ip = doc.get("ip").toString();
             if (ip.equals("::1")) {
@@ -1652,15 +1668,13 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             }
 
             //InputFormat: Mon May 19 07:21:27 EDT 2014
-            DateFormat inputDateFormat = new SimpleDateFormat("EEE MMM dd HH:mm:ss z yyyy");
-            Date solrDate = inputDateFormat.parse(time);
+            ZonedDateTime solrDate = ZonedDateTime.parse(time,
+                                                         DateTimeFormatter.ofPattern("EEE MMM dd HH:mm:ss z yyyy"));
 
             //OutputFormat: 2014-05-27T16:24:09
-            DateFormat outputDateFormat = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
-
             String out = time + "," + "view_" + contentServiceFactory.getDSpaceObjectService(dso).getTypeText(dso)
-                                                                     .toLowerCase() + "," + id + "," + outputDateFormat
-                .format(solrDate) + ",anonymous," + ip + "\n";
+                                                                     .toLowerCase() + "," + id + "," +
+                DateTimeFormatter.ISO_LOCAL_DATE_TIME.format(solrDate) + ",anonymous," + ip + "\n";
             FileUtils.writeStringToFile(exportOutput, out, StandardCharsets.UTF_8, true);
         }
     }
@@ -1676,7 +1690,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 result.append("&");
             }
 
-            result.append(key).append("=").append(URLEncoder.encode(parameters.get(key), "UTF-8"));
+            result.append(key).append("=").append(URLEncoder.encode(parameters.get(key), StandardCharsets.UTF_8));
         }
 
         return result.toString();
@@ -1696,7 +1710,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
      * The statistics shards should not be initialized until all tomcat webapps
      * are fully initialized.  DS-3457 uncovered an issue in DSpace 6x in which
      * this code triggered Tomcat to hang when statistics shards are present.
-     * This code is synchonized in the event that 2 threads trigger the
+     * This code is synchronized in the event that 2 threads trigger the
      * initialization at the same time.
      */
     protected synchronized void initSolrYearCores() {
@@ -1708,7 +1722,8 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         //Base url should like : http://localhost:{port.number}/solr
         String baseSolrUrl = ((HttpSolrClient) solr).getBaseURL().replace(statisticsCoreBase, "");
 
-        try (HttpSolrClient enumClient = new HttpSolrClient.Builder(baseSolrUrl).build();) {
+        try (HttpSolrClient enumClient = new HttpSolrClient.Builder(baseSolrUrl).withHttpClient(
+            httpConnectionPoolService.getClient()).build()) {
             //Attempt to retrieve all the statistic year cores
             CoreAdminRequest coresRequest = new CoreAdminRequest();
             coresRequest.setAction(CoreAdminAction.STATUS);
@@ -1732,9 +1747,9 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                     .add(baseSolrUrl.replace("http://", "").replace("https://", "") + statCoreName);
             }
             var baseCore = ((HttpSolrClient) solr)
-                    .getBaseURL()
-                    .replace("http://", "")
-                    .replace("https://", "");
+                .getBaseURL()
+                .replace("http://", "")
+                .replace("https://", "");
             if (!statisticYearCores.contains(baseCore)) {
                 //Also add the core containing the current year, if it hasn't been added already
                 statisticYearCores.add(baseCore);
@@ -1759,4 +1774,34 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         throw new UnknownHostException("unknown ip format");
     }
 
+    /**
+     * Checks if a given Bitstream's bundles are configured to be logged in Solr statistics.
+     *
+     * @param bitstream The bitstream to check.
+     * @return {@code true} if the bitstream event should be logged, {@code false} otherwise.
+     */
+    private boolean isBitstreamLoggable(Bitstream bitstream) {
+        String[] allowedBundles = configurationService
+            .getArrayProperty("solr-statistics.query.filter.bundles");
+        if (allowedBundles == null || allowedBundles.length == 0) {
+            return true;
+        }
+        List<String> allowedBundlesList = Arrays.asList(allowedBundles);
+        try {
+            List<Bundle> actualBundles = bitstream.getBundles();
+            if (actualBundles.isEmpty()) {
+                return true;
+            }
+            for (Bundle bundle : actualBundles) {
+                if (allowedBundlesList.contains(bundle.getName())) {
+                    return true;
+                }
+            }
+        } catch (SQLException e) {
+            log.error("Error checking bitstream bundles for logging statistics for bitstream {}",
+                bitstream.getID(), e);
+            return true;
+        }
+        return false;
+    }
 }
