@@ -9,7 +9,6 @@ package org.dspace.app.rest.repository;
 
 import java.io.IOException;
 import java.sql.SQLException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -17,6 +16,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.servlet.http.HttpServletRequest;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.dspace.app.rest.DiscoverableEndpointsService;
@@ -85,6 +85,9 @@ public class EPersonRestRepository extends DSpaceObjectRestRepository<EPerson, E
     @Autowired
     private GroupService groupService;
 
+    @Autowired
+    private ObjectMapper mapper;
+
     private final EPersonService es;
 
 
@@ -98,7 +101,6 @@ public class EPersonRestRepository extends DSpaceObjectRestRepository<EPerson, E
             throws AuthorizeException {
         // this need to be revisited we should receive an EPersonRest as input
         HttpServletRequest req = getRequestService().getCurrentRequest().getHttpServletRequest();
-        ObjectMapper mapper = new ObjectMapper();
         EPersonRest epersonRest = null;
         try {
             epersonRest = mapper.readValue(req.getInputStream(), EPersonRest.class);
@@ -186,7 +188,7 @@ public class EPersonRestRepository extends DSpaceObjectRestRepository<EPerson, E
         }
         String emailFromJson = epersonRest.getEmail();
         if (StringUtils.isNotBlank(emailFromJson)) {
-            if (!StringUtils.equalsIgnoreCase(registrationData.getEmail(), emailFromJson)) {
+            if (!Strings.CI.equals(registrationData.getEmail(), emailFromJson)) {
                 throw new DSpaceBadRequestException("The email resulting from the token does not match the email given"
                                                         + " in the json body. Email from token: " +
                                                     registrationData.getEmail() + " email from the json body: "
@@ -240,7 +242,7 @@ public class EPersonRestRepository extends DSpaceObjectRestRepository<EPerson, E
 
     private boolean canRegisterExternalAccount(RegistrationData registration, EPersonRest epersonRest) {
         return accountService.isTokenValidForCreation(registration) &&
-            StringUtils.equals(registration.getNetId(), epersonRest.getNetid());
+            Strings.CS.equals(registration.getNetId(), epersonRest.getNetid());
     }
 
     @Override
@@ -355,7 +357,7 @@ public class EPersonRestRepository extends DSpaceObjectRestRepository<EPerson, E
                          Patch patch) throws AuthorizeException, SQLException {
         boolean passwordChangeFound = false;
         for (Operation operation : patch.getOperations()) {
-            if (StringUtils.equalsIgnoreCase(operation.getPath(), "/password")) {
+            if (Strings.CI.equals(operation.getPath(), "/password")) {
                 passwordChangeFound = true;
             }
         }
@@ -365,7 +367,7 @@ public class EPersonRestRepository extends DSpaceObjectRestRepository<EPerson, E
                                                     "changing the password");
             }
         } else {
-            if (passwordChangeFound && !StringUtils.equals(context.getAuthenticationMethod(), "password")) {
+            if (passwordChangeFound && !Strings.CS.equals(context.getAuthenticationMethod(), "password")) {
                 throw new AccessDeniedException("Refused to perform the EPerson patch based to change the password " +
                                                         "for non \"password\" authentication");
             }
@@ -463,7 +465,7 @@ public class EPersonRestRepository extends DSpaceObjectRestRepository<EPerson, E
 
     @Override
     public void afterPropertiesSet() throws Exception {
-        discoverableEndpointsService.register(this, Arrays.asList(
-                Link.of("/api/" + EPersonRest.CATEGORY + "/registrations", EPersonRest.NAME + "-registration")));
+        discoverableEndpointsService.register(this, List.of(
+            Link.of("/api/" + EPersonRest.CATEGORY + "/registrations", EPersonRest.NAME + "-registration")));
     }
 }
